# ai-marketing

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  SETUP_CREDENTIALS.md  pyproject.toml  query_check.py  shopify_install.py
config/: accounts.yaml  brand.yaml  seo_content.yaml  thresholds.yaml
content/: __init__.py  audit.py  run.py
content/generator/: __init__.py  generate.py
content/scorer/: __init__.py  score.py
docs/: PRD.md  brother_setup_guide.md  creative_intelligence_system.md  ga4_setup_guide.md
ingestion/: run_all.py  schemas.py  setup_bigquery.py
ingestion/analysis/: alerts.py  claude_client.py  daily_report.py  dashboard.py  dashboard_template.py  explore_cogs.py  gads_health_check.py  monthly_pnl.py  run.py  weekly_strategy.py
ingestion/google_ads/: auth.py  pull_campaigns.py  pull_insights.py  pull_keywords.py  pull_search_terms.py  run.py
ingestion/meta/: auth.py  pull_campaigns.py  pull_creatives.py  pull_insights.py  run.py
ingestion/search_console/: auth.py  pull_performance.py  run.py
ingestion/shopify/: auth.py  pull_customers.py  pull_orders.py  pull_products.py  run.py
ingestion/utils/: bq_client.py  config.py  logger.py  slack.py
ingestion/views/: create_views.sql  deploy_views.py
optimization/: actions.py  budget.py  run.py  search_terms.py  shadow_report.py
scripts/: get_search_console_token.py  search_console_analysis.py
seo/: generate.py  meta_optimizer.py  opportunities.py  run.py  scorer.py
tests/: test_meta_auth.py  test_shopify_auth.py  test_utm_parsing.py
(+30 files in other folders)
