[project]
name = "ai-marketing"
version = "0.1.0"
description = "AI-powered marketing automation for Pickleball Effect"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.25",
    "google-auth>=2.29",
    "google-ads>=24.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "content", "seo", "optimization"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
